draft/nginx-controller/ingress-resource/frontend-service-cluserIP.yaml
#If you want to use ingress resources, you should replace the current NodePort service with this service.
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: customer-purchase-system
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
