draft/nginx-controller/ingress-resource/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-purchase-system-ingress
  namespace: customer-purchase-system
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: frontend
              port:
                number: 80
